# napari-label

./: LICENSE  README.md  setup.cfg  tox.ini
src/napari_labels/: _gui_widget.py  napari.yaml
src/napari_labels/_tests/: test_widget.py
